argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - host: argocd.<>
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
